# Pillars

./: Cargo.toml
src/: main.rs
src/application/: command_line.rs  locale.rs  mod.rs
src/ui/: main_window.glade  main_window.rs  mod.rs
